--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -16,6 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="15"
+            android:textSize="20dp"
+            android:textStyle="normal"
             android:id="@+id/transport_name"></TextView>
         <TextView
             android:layout_width="match_parent"
