--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -20,8 +20,13 @@
         android:layout_height="wrap_content"
         android:text="View"
         android:id="@+id/button_view_test"/>
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/textview_test"/>
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textview_test"/>
+    </ScrollView>
+
 </LinearLayout>
