--- a/app/src/main/res/layout/activity_pnr.xml
+++ b/app/src/main/res/layout/activity_pnr.xml
@@ -32,7 +32,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:id="@+id/pnr_no_edittext"
-            android:textSize="30dp"/>
+            android:textSize="30dp"
+            android:inputType="number"/>
     </LinearLayout>
     <Button
         android:layout_width="wrap_content"
