--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -20,6 +20,11 @@
         android:layout_height="wrap_content"
         android:text="View"
         android:id="@+id/button_view_test"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear Database"
+        android:id="@+id/button_delete_database"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
