--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="110dp">
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -9,7 +9,7 @@
         android:id="@+id/transport_icon"/>
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="110dp"
         android:layout_weight="3"
         android:orientation="vertical">
         <TextView
@@ -24,6 +24,7 @@
             android:layout_height="0dp"
             android:layout_weight="10"
             android:textStyle="bold"
+            android:textSize="15dp"
             android:gravity="center"
             android:id="@+id/transport_time"/>
         <TextView
@@ -31,6 +32,7 @@
             android:layout_height="0dp"
             android:layout_weight="9"
             android:gravity="center"
+            android:textSize="15dp"
             android:id="@+id/transport_duration"/>
     </LinearLayout>
     <LinearLayout
@@ -41,6 +43,7 @@
             android:layout_width="100dp"
             android:layout_height="0dp"
             android:id="@+id/transport_price"
+            android:textSize="18dp"
             android:layout_weight="2"/>
         <Button
             android:layout_width="wrap_content"
