--- a/app/src/main/res/layout/activity_train_status.xml
+++ b/app/src/main/res/layout/activity_train_status.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_train_status"
@@ -8,16 +13,19 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context="com.example.ankush.railway.activities.TrainStatusActivity"
     android:orientation="vertical">
+
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="284dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="TRAIN STATUS"
-        android:textSize="40dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:textSize="38dp"
+        android:textColor="@color/mainblue"
         android:layout_margin="16dp"/>
+
     <TextView
         android:layout_margin="16dp"
         android:layout_width="match_parent"
@@ -54,3 +62,4 @@
         android:id="@+id/button_book_now_activity_status"
         android:layout_margin="16dp"/>
 </LinearLayout>
+</ScrollView>
